Add format response report